# ProbingRLM

./: .env.example  .gitignore  README.md  anjim.md  main.py  prompts.md  pyproject.toml
frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.tsx  styles.css
prompt-config/: README.md  config.sample.md
scripts/: start_fullstack.sh
src/: cli_app.py  cli_config.py  cli_metrics.py  cli_prompting.py  context_controls.py  context_selector.py  output_utils.py  pdf_utils.py  prompt_loader.py  rlm_handler.py  web_app.py
src/backend/: app.py  routes.py  schemas.py  services.py
src/static/: index.html  script.js  style.css
tests/: test_cli_backends.py  test_context_controls.py  test_context_selector.py  test_main_query_prompt.py  test_main_web_build.py  test_pdf_gen.py  test_prompt_loader.py  test_streaming_live_events.py  test_verify_retrieval.py  test_web.py  verify_retrieval.py
