[project]
name = "ProbingRLM"
version = "0.1.0"
description = "CLI document retrieval tool built on the rlms library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown-pdf>=1.11",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rlms>=0.1.0",
]
